# sfdnormalize

./: README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yml
sfdnormalize/: __init__.py  __main__.py
