[metadata]
name = sfdnormalize
version = attr: sfdnormalize.VERSION_STR
author = Caleb Maclennan
author_email = caleb@alerque.com
description = Discard GUI information from SFD files
url = https://github.com/alerque/sfdnormalize
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts =
    sfdnormalize = sfdnormalize.__main__:main
